--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <hr>
       
         <div class ="navbar">
-            <a class="active" href="#"><i class="fa fa-fw fa-home"></i>Home</a>
-            <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-            <a class="shub" href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-            <a href="#"><i class="fa fa-calendar"></i> Appointment</a>
+            <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
+            <a href="navpages/contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+            <a class="shub" href="navpages/login.html"><i class="fa fa-fw fa-user"></i> Login</a>
+            <a href="navpages/appointment.html"><i class="fa fa-calendar"></i> Appointment</a>
         </div> 
 <br>
 
