adding information in links

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
 <div class="whips">
     <ul>
-        <a href=""><li>BMW</li></a>
-        <a href=""><li>MERCEDES-BENZ</li></a>
-        <a href=""><li>JEEP</li></a>
-        <a href=""><li>AUDI</li></a>
-        <a href=""><li>PEUGEOT</li></a>
+        <a href="https://en.wikipedia.org/wiki/BMW"><li>BMW</li></a>
+        <a href="https://en.wikipedia.org/wiki/Mercedes-Benz"><li>MERCEDES-BENZ</li></a>
+        <a href="https://en.wikipedia.org/wiki/Jeep"><li>JEEP</li></a>
+        <a href="https://en.wikipedia.org/wiki/Audi"><li>AUDI</li></a>
+        <a href="https://en.wikipedia.org/wiki/Peugeot"><li>PEUGEOT</li></a>
         <a href=""><li>KIA</li></a>
         <a href=""><li>JAGUAR</li></a>
         <a href=""><li>HONDA</li></a>
