updating business name, and add icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
 
-        <h1>My First Website.</h1>
+        <h1>CAR CENTRAL <i class="fa fa-globe" aria-hidden="true"></i></i></h1>
 
       <hr>
       
@@ -56,7 +56,7 @@
 
 <br>
 <div> 
-<h4>Shop By Make And Model</h4>
+<h4>Shop By Make And Model <i class="fa fa-car" aria-hidden="true"></i></h4>
 
 <div class="whips">
     <ul>
@@ -85,7 +85,14 @@
     <img src="img/car.png" alt="carpic">
 
 </div>
+<br>
 
+<footer class="foots">
+    <i class="fa fa-facebook" aria-hidden="true"></i>
+    <i class="fa fa-instagram" aria-hidden="true"></i>
+    <i class="fa fa-twitter" aria-hidden="true"></i>
+    <i class="fa fa-pinterest" aria-hidden="true"></i>
+</footer>
 
 
 </body>
